# GASPK

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  README.md
src/agent/: Agent.cpp  Agent.h  CMakeLists.txt  config.json  main.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h  MainWindow.cpp  MainWindow.h  config.json  main.cpp
src/client/qml/: HostStatusView.qml  InfoView.qml  MainWindow.qml
src/common/: CMakeLists.txt  DiskSpaceTrigger.cpp  DiskSpaceTrigger.h  FileCopyOperation.cpp  FileCopyOperation.h  FileDeleteOperation.cpp  FileDeleteOperation.h  FileMoveOperation.cpp  FileMoveOperation.h  MessageOperation.cpp  MessageOperation.h  Operation.cpp  Operation.h  PingTrigger.cpp  PingTrigger.h  RequestOperation.cpp  RequestOperation.h  Task.cpp  Task.h  Trigger.cpp  Trigger.h  TriggerWatchDog.cpp  TriggerWatchDog.h
src/server/: CMakeLists.txt  Server.cpp  Server.h  SqlDatabase.cpp  SqlDatabase.h  config.json  init_db.sql  main.cpp
